[gd_scene load_steps=20 format=3 uid="uid://bnrkskhul1v2p"]

[ext_resource type="Script" uid="uid://dqbmqopa13jid" path="res://scripts/player/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://dmsr3ktk02c5n" path="res://assets/Duck-Sheet.png" id="2_smehm"]
[ext_resource type="PackedScene" uid="uid://yfe745y04s73" path="res://scenes/red_balloon.tscn" id="2_ur7pv"]
[ext_resource type="Script" uid="uid://bnew337rdb0nt" path="res://scripts/balloon_holder.gd" id="2_y4r1p"]
[ext_resource type="Script" uid="uid://cf86idyf4t4np" path="res://scripts/hit_box_component.gd" id="3_smehm"]
[ext_resource type="Shader" uid="uid://ci0wv6sfuabrl" path="res://shaders/hitflash.gdshader" id="4_d2wvv"]
[ext_resource type="Script" uid="uid://b10ieu4wrw3qq" path="res://scripts/health_component.gd" id="4_ur7pv"]
[ext_resource type="Script" uid="uid://cusapb5ic7867" path="res://scripts/gunholder.gd" id="5_tuyoq"]
[ext_resource type="Script" uid="uid://byv45t6fcmwp" path="res://scripts/gun.gd" id="6_fjrip"]
[ext_resource type="PackedScene" uid="uid://chebw8gfih7v7" path="res://scenes/bullet.tscn" id="7_smehm"]
[ext_resource type="Texture2D" uid="uid://nenlh63i12kk" path="res://assets/compressed/frame_0_delay-0.1s.png" id="10_y4r1p"]
[ext_resource type="AudioStream" uid="uid://crtcn8520ih4u" path="res://sounds/laserShoot (1).wav" id="12_3v2ag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smehm"]
size = Vector2(24, 6.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3v2ag"]
shader = ExtResource("4_d2wvv")
shader_parameter/flash_color = Color(0, 0, 0, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_smehm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_smehm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_smehm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jej6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f1ej7"]
radius = 35.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 45.25)
shape = SubResource("RectangleShape2D_smehm")

[node name="BalloonHolder" type="Node2D" parent="."]
position = Vector2(-14, -23)
script = ExtResource("2_y4r1p")
balloon = ExtResource("2_ur7pv")

[node name="Ballon_spot_1" type="Node2D" parent="BalloonHolder"]
position = Vector2(3, -7)

[node name="Ballon_spot_2" type="Node2D" parent="BalloonHolder"]
position = Vector2(26, 0)

[node name="Ballon_spot_3" type="Node2D" parent="BalloonHolder"]
position = Vector2(-12, 6)

[node name="Player_Spr" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_3v2ag")
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_jej6c")
animation = &"idle"
autoplay = "idle"

[node name="HitBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component") groups=["player"]]
script = ExtResource("3_smehm")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://cf86idyf4t4np"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-1, 7)
shape = SubResource("CircleShape2D_f1ej7")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("4_ur7pv")
MAX_HEALTH = 1000.0
metadata/_custom_type_script = "uid://b10ieu4wrw3qq"

[node name="GunHolder" type="Node2D" parent="." node_paths=PackedStringArray("fire_rate_timer")]
position = Vector2(59, 13)
script = ExtResource("5_tuyoq")
orbit_radius = 10.0
fire_rate_timer = NodePath("fire_rate")

[node name="Gun" type="Node2D" parent="GunHolder" node_paths=PackedStringArray("Gun_Sprite", "bullet_spawn")]
script = ExtResource("6_fjrip")
Gun_Sprite = NodePath("Sprite2D")
bullet = ExtResource("7_smehm")
bullet_spawn = NodePath("bullet_spawn")
metadata/_custom_type_script = "uid://byv45t6fcmwp"

[node name="Sprite2D" type="Sprite2D" parent="GunHolder/Gun"]
texture = ExtResource("10_y4r1p")

[node name="bullet_spawn" type="Node2D" parent="GunHolder/Gun"]
position = Vector2(26, 3)

[node name="fire_rate" type="Timer" parent="GunHolder"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="GunHolder"]
stream = ExtResource("12_3v2ag")

[connection signal="bullet_spawn" from="GunHolder" to="GunHolder/Gun" method="_on_gun_holder_bullet_spawn"]
[connection signal="timeout" from="GunHolder/fire_rate" to="GunHolder" method="_on_fire_rate_timeout"]
